--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.3",
     "ethers": "^6.11.0",
-    "pm2": "^5.3.1"
+    "pm2": "^5.3.1",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   }
 }
